--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,19 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100%;
+  height: 100%;
+  background: url(https://e.zufe.edu.cn/zcxs/resources/jkm/images/blue-bg.png) no-repeat left top;
+  background-size: 100% auto;
+  font-family: 'Microsoft YaHei';
+}
+html{
+    height: 100%;
+}
+#root{
+    margin: 0;
+    width: 100%;
+    height: 100%;
 }
 
 code {
