--- a/src/App.css
+++ b/src/App.css
@@ -3,4 +3,9 @@
   width: 100%;
   height: 100%;
 }
-
+.code{
+  width: 97%;
+  height: 16rem;
+  background: url(./code.png) no-repeat left top;
+  background-size: 100% 100%;
+}
