--- a/src/index.css
+++ b/src/index.css
@@ -2,13 +2,13 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif 'Microsoft YaHei';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   width: 100%;
   height: 100%;
-  background: url(https://e.zufe.edu.cn/zcxs/resources/jkm/images/blue-bg.png) no-repeat left top;
-  background-size: 100% auto;
+  background: url(https://e.zufe.edu.cn/zc/resources/jkm/images/bg1.jpg) no-repeat left top;
+  background-size: 100% 100%;
   font-family: 'Microsoft YaHei';
 }
 html{
